2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Removed AFM file reader.

2010-01-27 Peter Spjuth   <peter.spjuth@gmail.com>
	* More of Yaroslav Schekin's patch.
	* Added font argument to CleanText.
	* Added bboxt and bboxb font metrics.
	* Corrected size of background fill for text.
	* Support angle for background fill for text.

2010-01-01 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added bookmarkAdd and metadata methods. (Kevin Partin) [FR 4842]

2009-12-16 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added getImageHeight, getImageWidth, getImageSize methods.

2009-12-16 Peter Spjuth   <peter.spjuth@gmail.com>
	* Speed up of raw image handling. [Bug 16560]

2009-10-27 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added -rotate document/page option. (Thanks to Martin Walcher)

2009-09-11 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added getTextPosition method.

2009-09-11 Peter Spjuth   <peter.spjuth@gmail.com>
	* Initialise origxpos to avoid error. [Bug 15246]

2009-09-11 Peter Spjuth   <peter.spjuth@gmail.com>
	* addRawImage: Include Length field in addRawImage. [Bug 16264]

2009-09-11 Peter Spjuth   <peter.spjuth@gmail.com>
	* Started adding a patch from Yaroslav Schekin.

2009-01-04 Peter Spjuth   <peter.spjuth@gmail.com>
	* Release 0.5
	
2008-04-02 Peter Spjuth   <peter.spjuth@gmail.com>
	* Use cp1252 encoding to match font encoding.

2008-04-02 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added -linesvar option to drawTextBox.

2008-03-04 Peter Spjuth   <peter.spjuth@gmail.com>
	* Release 0.4
	
2008-03-03 Peter Spjuth   <peter.spjuth@gmail.com>
	* Require an explicit set font. *** INCOMPATIBLE CHANGE ***

2008-03-03 Peter Spjuth   <peter.spjuth@gmail.com>
	* Handle more general colors, including Tk colors.

2008-02-27 Peter Spjuth   <peter.spjuth@gmail.com>
	* Addec canvas method to draw the contents of a canvas.

2008-02-26 Peter Spjuth   <peter.spjuth@gmail.com>
	* Redesigned API for arc, splitting r to rx/ry.
	  *** INCOMPATIBLE CHANGE ***
