@@ -14,7 +14,39 @@ foreach fontname $Fonts {
     set FontsAttrs($fontname,encoding) cp1252
     set FontsAttrs($fontname,specialencoding) 0
     set FontsAttrs($fontname,basefontname) $fontname
-    }
+    set BFA($fontname,ascend) 0
+    set BFA($fontname,descend) 0
+    set BFA($fontname,fixed) 0
+}
+set BFA(Courier,fixed) 1
+set BFA(Courier-Bold,fixed) 1
+set BFA(Courier-BoldOblique,fixed) 1
+set BFA(Courier-Oblique,fixed) 1
+
+set BFA(Courier,ascend) 629
+set BFA(Courier-Bold,ascend) 629
+set BFA(Courier-BoldOblique,ascend) 629
+set BFA(Courier-Oblique,ascend) 629
+set BFA(Helvetica,ascend) 718
+set BFA(Helvetica-Bold,ascend) 718
+set BFA(Helvetica-BoldOblique,ascend) 718
+set BFA(Helvetica-Oblique,ascend) 718
+set BFA(Times-Bold,ascend) 683
+set BFA(Times-BoldItalic,ascend) 683
+set BFA(Times-Italic,ascend) 683
+set BFA(Times-Roman,ascend) 683
+set BFA(Courier,descend) -157
+set BFA(Courier-Bold,descend) -157
+set BFA(Courier-BoldOblique,descend) -157
+set BFA(Courier-Oblique,descend) -157
+set BFA(Helvetica,descend) -207
+set BFA(Helvetica-Bold,descend) -207
+set BFA(Helvetica-BoldOblique,descend) -207
+set BFA(Helvetica-Oblique,descend) -207
+set BFA(Times-Bold,descend) -217
+set BFA(Times-BoldItalic,descend) -217
+set BFA(Times-Italic,descend) -217
+set BFA(Times-Roman,descend) -217
 
 set BFA(Courier-Bold,charWidths) {32 600 33 600 34 600 35 600 36 600 37 600 38 600 39 600 40 600 41 600 42 600 43 600 44 600 45 600 46 600 47 600 48 600 49 600 50 600 51 600 52 600 53 600 54 600 55 600 56 600 57 600 58 600 59 600 60 600 61 600 62 600 63 600 64 600 65 600 66 600 67 600 68 600 69 600 70 600 71 600 72 600 73 600 74 600 75 600 76 600 77 600 78 600 79 600 80 600 81 600 82 600 83 600 84 600 85 600 86 600 87 600 88 600 89 600 90 600 91 600 92 600 93 600 94 600 95 600 96 600 97 600 98 600 99 600 100 600 101 600 102 600 103 600 104 600 105 600 106 600 107 600 108 600 109 600 110 600 111 600 112 600 113 600 114 600 115 600 116 600 117 600 118 600 119 600 120 600 121 600 122 600 123 600 124 600 125 600 126 600 161 600 162 600 163 600 164 600 165 600 166 600 167 600 168 600 169 600 170 600 171 600 172 600 174 600 175 600 176 600 177 600 178 600 179 600 180 600 181 600 182 600 183 600 184 600 185 600 186 600 187 600 188 600 189 600 190 600 191 600 192 600 193 600 194 600 195 600 196 600 197 600 198 600 199 600 200 600 201 600 202 600 203 600 204 600 205 600 206 600 207 600 208 600 209 600 210 600 211 600 212 600 213 600 214 600 215 600 216 600 217 600 218 600 219 600 220 600 221 600 222 600 223 600 224 600 225 600 226 600 227 600 228 600 229 600 230 600 231 600 232 600 233 600 234 600 235 600 236 600 237 600 238 600 239 600 240 600 241 600 242 600 243 600 244 600 245 600 246 600 247 600 248 600 249 600 250 600 251 600 252 600 253 600 254 600 255 600 256 600 257 600 258 600 259 600 260 600 261 600 262 600 263 600 268 600 269 600 270 600 271 600 272 600 273 600 274 600 275 600 278 600 279 600 280 600 281 600 282 600 283 600 286 600 287 600 290 600 291 600 298 600 299 600 302 600 303 600 304 600 305 600 310 600 311 600 313 600 314 600 315 600 316 600 317 600 318 600 321 600 322 600 323 600 324 600 325 600 326 600 327 600 328 600 332 600 333 600 336 600 337 600 338 600 339 600 340 600 341 600 342 600 343 600 344 600 345 600 346 600 347 600 350 600 351 600 352 600 353 600 354 600 355 600 356 600 357 600 362 600 363 600 366 600 367 600 368 600 369 600 370 600 371 600 376 600 377 600 378 600 379 600 380 600 381 600 382 600 402 600 536 600 537 600 710 600 711 600 728 600 729 600 730 600 731 600 732 600 733 600 8211 600 8212 600 8216 600 8217 600 8218 600 8220 600 8221 600 8222 600 8224 600 8225 600 8226 600 8230 600 8240 600 8249 600 8250 600 8260 600 8364 600 8482 600 8706 600 8710 600 8721 600 8722 600 8730 600 8800 600 8804 600 8805 600 9674 600 63171 600 64257 600 64258 600}
 set BFA(Courier-Bold,bbox) [list -113 -250 749 801]
