@@ -1,4 +1,7 @@
 2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
+	* Added last of YS font patch.
+
+2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
 	* Removed AFM file reader.
 
 2010-01-27 Peter Spjuth   <peter.spjuth@gmail.com>
